--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   get_it:
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_localizations:
-    sdk: flutter
   url_launcher:
   path_provider:
   shared_preferences:
@@ -51,7 +45,21 @@ dev_dependencies:
   uuid: ^2.0.4
   dio: ^3.0.8
   validators: ^2.0.0
+  flutter_launcher_icons: ^0.7.3
+  flutter_launcher_name: ^0.0.1
 
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+
+
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 flutter_launcher_name:
   name: "SCRIPS UA"
